added swagger for evidences and fixed controller to accept relevant param in the request body
