# Servers/swagger.yaml
@@ -265,6 +265,306 @@ paths:
                 error:
                   type: object
 
+  /evidences:
+    get:
+      tags: [evidences]
+      security:
+        - JWTAuth: []
+      responses:
+        "200":
+          description: list of all evidences
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: ok
+                  data:
+                    type: array
+                    items:
+                      $ref: "#components/schemas/Evidence"
+        "204":
+          description: no content to display
+          content:
+            application/json:
+              type: object
+              properties:
+                message:
+                  type: string
+                  example: no content
+                data:
+                  type: object
+        "500":
+          description: internal server error
+          content:
+            application/json:
+              type: object
+              properties:
+                message:
+                  type: string
+                  example: internal server error
+                error:
+                  type: object
+    post:
+      tags: [evidences]
+      security:
+        - JWTAuth: []
+      requestBody:
+        description: body of the new evidence
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                subrequirement_id:
+                  type: integer
+                  example: 1
+                document_name:
+                  type: string
+                  example: "Privacy Policy v2.1"
+                document_type:
+                  type: string
+                  example: "PDF"
+                file_path:
+                  type: string
+                  example: "/documents/privacy_policy_v2.1.pdf"
+                uploader_id:
+                  type: integer
+                  example: 1
+                description:
+                  type: string
+                  example: "Updated privacy policy to comply with new consent regulations."
+                status:
+                  type: string
+                  example: "Approved"
+                reviewer_id:
+                  type: integer
+                  example: 2
+                review_comments:
+                  type: string
+                  example: "Policy aligns with current standards."
+        required: true
+      responses:
+        "201":
+          description: created evidence
+          content:
+            application/json:
+              type: object
+              properties:
+                message:
+                  type: string
+                  example: created
+                data:
+                  type: object
+                  $ref: "#components/schemas/Evidence"
+        "500":
+          description: internal server error
+          content:
+            application/json:
+              type: object
+              properties:
+                message:
+                  type: string
+                  example: internal server error
+                error:
+                  type: object
+        "503":
+          description: internal server error
+          content:
+            application/json:
+              type: object
+              properties:
+                message:
+                  type: string
+                  example: service unavailable
+                error:
+                  type: object
+  /evidences/{id}:
+    get:
+      tags: [evidences]
+      security:
+        - JWTAuth: []
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: integer
+          required: true
+          description: id of the evidence
+      responses:
+        "200":
+          description: evidence
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: ok
+                  data:
+                    $ref: "#components/schemas/AssessmentTracker"
+        "404":
+          description: no content to display
+          content:
+            application/json:
+              type: object
+              properties:
+                message:
+                  type: string
+                  example: not found
+                data:
+                  type: object
+        "500":
+          description: internal server error
+          content:
+            application/json:
+              type: object
+              properties:
+                message:
+                  type: string
+                  example: internal server error
+                error:
+                  type: object
+    put:
+      tags: [evidences]
+      security:
+        - JWTAuth: []
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: integer
+          required: true
+          description: id of the evidence
+      requestBody:
+        description: body of the new evidence
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                subrequirement_id:
+                  type: integer
+                  example: 1
+                document_name:
+                  type: string
+                  example: "Privacy Policy v2.1"
+                document_type:
+                  type: string
+                  example: "PDF"
+                file_path:
+                  type: string
+                  example: "/documents/privacy_policy_v2.1.pdf"
+                uploader_id:
+                  type: integer
+                  example: 1
+                description:
+                  type: string
+                  example: "Updated privacy policy to comply with new consent regulations."
+                status:
+                  type: string
+                  example: "Approved"
+                reviewer_id:
+                  type: integer
+                  example: 2
+                review_comments:
+                  type: string
+                  example: "Policy aligns with current standards."
+                upload_date:
+                  type: string
+                  format: date-time
+                  example: "2024-06-05T00:00:00.000Z"
+                last_reviewed:
+                  type: string
+                  format: date-time
+                  example: "2024-09-01T00:00:00.000Z"
+        required: true
+      responses:
+        "202":
+          description: evidence
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: accepted
+                  data:
+                    $ref: "#components/schemas/Evidence"
+        "404":
+          description: no content to display
+          content:
+            application/json:
+              type: object
+              properties:
+                message:
+                  type: string
+                  example: not found
+                data:
+                  type: object
+        "500":
+          description: internal server error
+          content:
+            application/json:
+              type: object
+              properties:
+                message:
+                  type: string
+                  example: internal server error
+                error:
+                  type: object
+    delete:
+      tags: [evidences]
+      security:
+        - JWTAuth: []
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: integer
+          required: true
+          description: id of the evidence to delete
+      responses:
+        "202":
+          description: evidence
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: accepted
+                  data:
+                    type: boolean
+                    example: true
+        "404":
+          description: no content to display
+          content:
+            application/json:
+              type: object
+              properties:
+                message:
+                  type: string
+                  example: not found
+                data:
+                  type: object
+        "500":
+          description: internal server error
+          content:
+            application/json:
+              type: object
+              properties:
+                message:
+                  type: string
+                  example: internal server error
+                error:
+                  type: object
+
 components:
   securitySchemes:
     JWTAuth:
@@ -288,3 +588,44 @@ components:
         status:
           type: string
           example: "In Progress"
+    Evidence:
+      type: object
+      properties:
+        id:
+          type: integer
+          example: 1
+        subrequirement_id:
+          type: integer
+          example: 1
+        document_name:
+          type: string
+          example: "Risk Assessment Report"
+        document_type:
+          type: string
+          example: "PDF"
+        file_path:
+          type: string
+          example: "/uploads/documents/risk_assessment_report.pdf"
+        upload_date:
+          type: string
+          format: date-time
+          example: "2024-10-22T14:30:00Z"
+        uploader_id:
+          type: integer
+          example: 1
+        description:
+          type: string
+          example: "This document outlines the findings from the latest risk assessment."
+        status:
+          type: string
+          example: "Pending"
+        last_reviewed:
+          type: string
+          format: date-time
+          example: "2024-10-23T10:00:00Z"
+        reviewer_id:
+          type: integer
+          example: 2
+        review_comments:
+          type: string
+          example: "The document is missing necessary signatures."
